--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "craft-api",
-  "version": "0.0.0",
+  "name": "task-api",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www"
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.1",
     "express": "~4.16.1",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "log4js": "^6.9.1",
     "log4js-json-layout": "^2.2.3",
     "morgan": "~1.9.1",
@@ -23,8 +24,10 @@
     "paginate": "^0.2.0",
     "passport": "^0.7.0",
     "redis": "^4.6.12",
-    "sequelize": "^5.22.5",
+    "sequelize": "^6.37.1",
+    "sequelize-auto": "^0.8.8",
     "sequelize-cli": "^5.5.1",
+    "sqlite3": "^5.1.7",
     "validator": "^13.11.0"
   },
   "devDependencies": {
